jswt-parser/src/snapshots/jswt_parser__test__function_declaration_statement.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                FunctionDeclaration(
                    FunctionDeclarationElement {
                        span: Span {
                            file: "test.1",
                            module: "module/test.1",
                            start: 0,
                            end: 19,
                        },
                        decorators: FunctionDecorators {
                            annotations: [],
                            export: false,
                        },
                        ident: Identifier {
                            span: Span {
                                file: "test.1",
                                module: "module/test.1",
                                start: 9,
                                end: 13,
                            },
                            value: "test",
                        },
                        params: FormalParameterList {
                            parameters: [],
                        },
                        returns: None,
                        body: FunctionBody {
                            span: Span {
                                file: "test.1",
                                module: "module/test.1",
                                start: 16,
                                end: 19,
                            },
                            source_elements: SourceElements {
                                source_elements: [],
                            },
                        },
                    },
                ),
            ],
        },
    },
}
