jswt-parser/src/snapshots/jswt_parser__test__function_declaration_statement_with_export_decorator.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                FunctionDeclaration(
                    FunctionDeclarationElement {
                        span: Span {
                            file: "test.1",
                            start: 0,
                            end: 26,
                        },
                        decorators: FunctionDecorators {
                            annotations: [],
                            export: true,
                        },
                        ident: Identifier {
                            span: Span {
                                file: "test.1",
                                start: 16,
                                end: 20,
                            },
                            value: "test",
                        },
                        params: FormalParameterList {
                            parameters: [],
                        },
                        returns: None,
                        body: FunctionBody {
                            span: Span {
                                file: "test.1",
                                start: 23,
                                end: 26,
                            },
                            source_elements: SourceElements {
                                source_elements: [],
                            },
                        },
                    },
                ),
            ],
        },
    },
}
