jswt-parser/src/snapshots/jswt_parser__test__function_declaration_statement_with_two_params.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Program {
    source_elements: SourceElements {
        source_elements: [
            FunctionDeclaration(
                FunctionDeclarationElement {
                    span: Span {
                        file: "test.1",
                        start: 0,
                        end: 33,
                    },
                    decorators: FunctionDecorators {
                        annotation: None,
                        export: false,
                    },
                    ident: Ident {
                        span: Span {
                            file: "test.1",
                            start: 9,
                            end: 13,
                        },
                        value: "name",
                    },
                    params: FormalParameterList {
                        parameters: [
                            FormalParameterArg {
                                ident: Ident {
                                    span: Span {
                                        file: "test.1",
                                        start: 14,
                                        end: 15,
                                    },
                                    value: "a",
                                },
                                type_annotation: Ident {
                                    span: Span {
                                        file: "test.1",
                                        start: 17,
                                        end: 20,
                                    },
                                    value: "i32",
                                },
                            },
                            FormalParameterArg {
                                ident: Ident {
                                    span: Span {
                                        file: "test.1",
                                        start: 22,
                                        end: 23,
                                    },
                                    value: "b",
                                },
                                type_annotation: Ident {
                                    span: Span {
                                        file: "test.1",
                                        start: 25,
                                        end: 28,
                                    },
                                    value: "f32",
                                },
                            },
                        ],
                    },
                    returns: None,
                    body: FunctionBody {
                        span: Span {
                            file: "test.1",
                            start: 30,
                            end: 33,
                        },
                        source_elements: SourceElements {
                            source_elements: [],
                        },
                    },
                },
            ),
        ],
    },
}
