jswt-parser/src/snapshots/jswt_parser__test__parse_additive_expression.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_additive_expression",
                    module: "module/test_parse_additive_expression",
                    start: 0,
                    end: 14,
                    [content]: "let x = 1 + 2;",
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_additive_expression",
                        module: "module/test_parse_additive_expression",
                        start: 0,
                        end: 14,
                        [content]: "let x = 1 + 2;",
                    },
                    source_elements: [
                        Statement(
                            Variable(
                                VariableStatement {
                                    span: Span {
                                        file: "test_parse_additive_expression",
                                        module: "module/test_parse_additive_expression",
                                        start: 0,
                                        end: 14,
                                        [content]: "let x = 1 + 2;",
                                    },
                                    modifier: Let(
                                        Span {
                                            file: "test_parse_additive_expression",
                                            module: "module/test_parse_additive_expression",
                                            start: 0,
                                            end: 3,
                                            [content]: "let",
                                        },
                                    ),
                                    target: Identifier(
                                        Identifier {
                                            span: Span {
                                                file: "test_parse_additive_expression",
                                                module: "module/test_parse_additive_expression",
                                                start: 4,
                                                end: 5,
                                                [content]: "x",
                                            },
                                            value: "x",
                                        },
                                    ),
                                    expression: Additive(
                                        BinaryExpression {
                                            span: Span {
                                                file: "test_parse_additive_expression",
                                                module: "module/test_parse_additive_expression",
                                                start: 8,
                                                end: 13,
                                                [content]: "1 + 2",
                                            },
                                            left: Literal(
                                                Integer(
                                                    IntegerLiteral {
                                                        span: Span {
                                                            file: "test_parse_additive_expression",
                                                            module: "module/test_parse_additive_expression",
                                                            start: 8,
                                                            end: 9,
                                                            [content]: "1",
                                                        },
                                                        value: 1,
                                                    },
                                                ),
                                            ),
                                            op: Plus(
                                                Span {
                                                    file: "test_parse_additive_expression",
                                                    module: "module/test_parse_additive_expression",
                                                    start: 10,
                                                    end: 11,
                                                    [content]: "+",
                                                },
                                            ),
                                            right: Literal(
                                                Integer(
                                                    IntegerLiteral {
                                                        span: Span {
                                                            file: "test_parse_additive_expression",
                                                            module: "module/test_parse_additive_expression",
                                                            start: 12,
                                                            end: 13,
                                                            [content]: "2",
                                                        },
                                                        value: 2,
                                                    },
                                                ),
                                            ),
                                        },
                                    ),
                                    type_annotation: None,
                                },
                            ),
                        ),
                    ],
                },
            },
        ],
    },
}
