jswt-parser/src/snapshots/jswt_parser__test__parse_additive_expression_left_associativity.snap
---
source: jswt-parser/src/lib.rs
expression: actual
---
Ast {
    program: Program {
        files: [
            File {
                span: Span {
                    file: "test_parse_additive_expression_left_associativity",
                    module: "module/test_parse_additive_expression_left_associativity",
                    start: 0,
                    end: 22,
                },
                source_elements: SourceElements {
                    span: Span {
                        file: "test_parse_additive_expression_left_associativity",
                        module: "module/test_parse_additive_expression_left_associativity",
                        start: 0,
                        end: 22,
                    },
                    source_elements: [
                        VariableDeclaration(
                            VariableDeclarationElement {
                                annotations: [],
                                export: false,
                                span: Span {
                                    file: "test_parse_additive_expression_left_associativity",
                                    module: "module/test_parse_additive_expression_left_associativity",
                                    start: 0,
                                    end: 22,
                                },
                                modifier: Let(
                                    Span {
                                        file: "test_parse_additive_expression_left_associativity",
                                        module: "module/test_parse_additive_expression_left_associativity",
                                        start: 0,
                                        end: 3,
                                    },
                                ),
                                name: Identifier {
                                    span: Span {
                                        file: "test_parse_additive_expression_left_associativity",
                                        module: "module/test_parse_additive_expression_left_associativity",
                                        start: 4,
                                        end: 5,
                                    },
                                    value: "x",
                                },
                                expression: Additive(
                                    BinaryExpression {
                                        span: Span {
                                            file: "test_parse_additive_expression_left_associativity",
                                            module: "module/test_parse_additive_expression_left_associativity",
                                            start: 8,
                                            end: 21,
                                        },
                                        left: Additive(
                                            BinaryExpression {
                                                span: Span {
                                                    file: "test_parse_additive_expression_left_associativity",
                                                    module: "module/test_parse_additive_expression_left_associativity",
                                                    start: 8,
                                                    end: 17,
                                                },
                                                left: Additive(
                                                    BinaryExpression {
                                                        span: Span {
                                                            file: "test_parse_additive_expression_left_associativity",
                                                            module: "module/test_parse_additive_expression_left_associativity",
                                                            start: 8,
                                                            end: 13,
                                                        },
                                                        left: Literal(
                                                            Integer(
                                                                IntegerLiteral {
                                                                    span: Span {
                                                                        file: "test_parse_additive_expression_left_associativity",
                                                                        module: "module/test_parse_additive_expression_left_associativity",
                                                                        start: 8,
                                                                        end: 9,
                                                                    },
                                                                    value: 3,
                                                                },
                                                            ),
                                                        ),
                                                        op: Plus(
                                                            Span {
                                                                file: "test_parse_additive_expression_left_associativity",
                                                                module: "module/test_parse_additive_expression_left_associativity",
                                                                start: 10,
                                                                end: 11,
                                                            },
                                                        ),
                                                        right: Literal(
                                                            Integer(
                                                                IntegerLiteral {
                                                                    span: Span {
                                                                        file: "test_parse_additive_expression_left_associativity",
                                                                        module: "module/test_parse_additive_expression_left_associativity",
                                                                        start: 12,
                                                                        end: 13,
                                                                    },
                                                                    value: 2,
                                                                },
                                                            ),
                                                        ),
                                                    },
                                                ),
                                                op: Plus(
                                                    Span {
                                                        file: "test_parse_additive_expression_left_associativity",
                                                        module: "module/test_parse_additive_expression_left_associativity",
                                                        start: 14,
                                                        end: 15,
                                                    },
                                                ),
                                                right: Literal(
                                                    Integer(
                                                        IntegerLiteral {
                                                            span: Span {
                                                                file: "test_parse_additive_expression_left_associativity",
                                                                module: "module/test_parse_additive_expression_left_associativity",
                                                                start: 16,
                                                                end: 17,
                                                            },
                                                            value: 1,
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                        op: Plus(
                                            Span {
                                                file: "test_parse_additive_expression_left_associativity",
                                                module: "module/test_parse_additive_expression_left_associativity",
                                                start: 18,
                                                end: 19,
                                            },
                                        ),
                                        right: Literal(
                                            Integer(
                                                IntegerLiteral {
                                                    span: Span {
                                                        file: "test_parse_additive_expression_left_associativity",
                                                        module: "module/test_parse_additive_expression_left_associativity",
                                                        start: 20,
                                                        end: 21,
                                                    },
                                                    value: 0,
                                                },
                                            ),
                                        ),
                                    },
                                ),
                                type_annotation: None,
                            },
                        ),
                    ],
                },
            },
        ],
    },
}
