jswt-parser/src/snapshots/jswt_parser__test__parse_argument_expression_with_expression_parameter.snap
---
source: jswt-parser/src/lib.rs
expression: actual

---
Ast {
    program: Program {
        source_elements: SourceElements {
            source_elements: [
                Statement(
                    Expression(
                        ExpressionStatement {
                            span: Span {
                                file: "test.1",
                                start: 0,
                                end: 12,
                            },
                            expression: Arguments(
                                ArgumentsExpression {
                                    ty: Unknown,
                                    span: Span {
                                        file: "test.1",
                                        start: 0,
                                        end: 11,
                                    },
                                    ident: Identifier(
                                        IdentifierExpression {
                                            span: Span {
                                                file: "test.1",
                                                start: 0,
                                                end: 4,
                                            },
                                            ident: Ident {
                                                span: Span {
                                                    file: "test.1",
                                                    start: 0,
                                                    end: 4,
                                                },
                                                value: "test",
                                            },
                                            ty: Unknown,
                                        },
                                    ),
                                    arguments: ArgumentsList {
                                        span: Span {
                                            file: "test.1",
                                            start: 4,
                                            end: 11,
                                        },
                                        arguments: [
                                            Additive(
                                                BinaryExpression {
                                                    ty: Unknown,
                                                    span: Span {
                                                        file: "test.1",
                                                        start: 5,
                                                        end: 10,
                                                    },
                                                    left: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                ty: Primitive(
                                                                    I32,
                                                                ),
                                                                span: Span {
                                                                    file: "test.1",
                                                                    start: 5,
                                                                    end: 6,
                                                                },
                                                                value: 1,
                                                            },
                                                        ),
                                                    ),
                                                    op: Plus(
                                                        Span {
                                                            file: "test.1",
                                                            start: 7,
                                                            end: 8,
                                                        },
                                                    ),
                                                    right: Literal(
                                                        Integer(
                                                            IntegerLiteral {
                                                                ty: Primitive(
                                                                    I32,
                                                                ),
                                                                span: Span {
                                                                    file: "test.1",
                                                                    start: 9,
                                                                    end: 10,
                                                                },
                                                                value: 2,
                                                            },
                                                        ),
                                                    ),
                                                },
                                            ),
                                        ],
                                    },
                                },
                            ),
                        },
                    ),
                ),
            ],
        },
    },
}
